Minor change to use canonical Boolean constant -- allows boxed comparison with Boolean.TRUE/FALSE in future